# CASA

./: .#README.md  .gitignore  .gitmodules  README.md  topics.txt
builder/: README.md
builder/packer/azure-packer/: README.md  casa_gold_desktop_0x64_azure.pkr.hcl  docker-ubuntu.pkr.hcl  rrc_linux.pkr.hcl
builder/packer/setup_scripts/: 00_base.sh  00_base_azure.sh  05_profile.sh  100_ubuntu_desktop.sh  101_vmware_tools_desktop.sh  103_docker.sh  105_gazebo.sh  106_px4_autopilot.sh  107_px4_ros_dds.sh  10_system_ros2.sh  110_browsers.sh  11_system_mavros.sh  133_qgroundcontrol.sh  135_app_vscode.sh  20_dev_python.sh  25_dev_go.sh  30_app_network.sh  900_upgrade.sh
builder/packer/vmware-packer/: README.md  swarm02_gold_desktop_0x64_vmware.pkr.hcl  swarm02_gold_headless_0x64_vmware.pkr.hcl
builder/packer/vmware-packer/http/: user-data
builder/packer/vmware-packer/subiquity_deleteme/: user-data
casa_msgs/msg/: CasaGlobalPose.msg  CasaPoseArray.msg  CasaTaskArray.msg
casa_px4_mocap/: CMakeLists.txt  package.xml
casa_px4_mocap/src/: casa_flight_mode.cpp  casa_task_update.cpp
casa_px4_mocap/src/old/: mocap_to_px4.cpp
control/commands/: package.xml
control/commands/src/: takeoff.cpp
control/dot/: CMakeLists.txt
control/dot/dot/: llutmconversion.py  planner.py  test.py  utmpose.py
control/dot/launch/: allocator.launch.py
control/dot/src/: allocator.py  allocator_node.py
docs/: FUTUREDEV.md  FUTUREDEV.md~  dev.md  mutli_agent_sim.md
domain_bridge-aprotyas-add_foxy_support/include/domain_bridge/: topic_bridge_options.hpp
install/: local_setup.sh  setup.sh
install/casa_startup/share/casa_startup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh
interfaces/system_interface/: CMakeLists.txt
interfaces/system_interface/config/: system.yaml
interfaces/system_interface/include/system_interface/: heartbeat_client.hpp  heartbeat_server.hpp  system.hpp
interfaces/system_interface/launch/: system_sim.launch.py
interfaces/system_interface/src/: agent_tracker.cpp  heartbeat_server_node.cpp  occupancy_grid.cpp  system.cpp  system_node.cpp
log/: latest_build
mavros2/: README.md  node.launch.py  ros2_param.yaml
pixhawk/pixhawk_interface/launch/: pixhawk.launch.py  pixhawk_sim.launch.py  task.launch.py
pixhawk/pixhawk_interface/src/: position.cpp  task_goto.cpp
rosbag2_2023_06_16-00_12_42/: metadata.yaml  rosbag2_2023_06_16-00_12_42_0.db3
rrc_px4_mocap/: CMakeLists.txt  package.xml
rrc_px4_mocap/src/: mocap_to_px4_practice.cpp  px4_dds_sub.cpp  rrc_offboard_test.cpp  rrc_offboard_test2.cpp
sitl/: Dockerfile  README.md  run_sitl.sh
sitl/mavros_legacy/tests/: monitor.py  orbit.py  requirements.txt
sitl/tests/: .gitignore
src/behaviors/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml
src/behaviors/config/: behaviors.yaml
src/behaviors/launch/: behaviors.launch.py  behaviors_sim.launch.py
src/behaviors/node/: behavior_ros_interface_node.py
src/behaviors/src/: circle.py  example.py  goto_xy.py
src/casa_bringup/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml
src/casa_bringup/casa_bringup/: network.py
src/casa_bringup/launch/: pixhawk.launch.py  pixhawk_sim.launch.py  single_turtlebot_sim.launch.py  turtlbot_sim.launch.py  turtlebot.launch.py
src/casa_msgs/: CMakeLists.txt  package.xml
src/casa_msgs/msg/: Casa  CasaAgent.msg~  CasaAgentArray.msg  CasaInterface.msg  CasaPoseArray.msg  CasaPoses.msg  CasaTask.msg
src/casa_startup/: package.xml  setup.cfg  setup.py
src/control/commands/: CMakeLists.txt  commands.md
src/control/commands/launch/: takeoff.launch.py  takeoff.launch.py~
src/control/commands/src/: #takeoff.cpp#  .#takeoff.cpp  offboard_control.cpp  takeoff.cpp
src/control/dot/: CMakeLists.txt  RiverCourtsTasks-Append2.kml  package.xml
src/control/dot/config/: task.yaml
src/control/dot/dot/: localpose.py  planner.py  test.py
src/control/dot/launch/: #allocator.launch.py#  .#allocator.launch.py  allocator.launch.py  allocator_sim.launch.py
src/control/dot/src/: allocator.py
src/control/dot/tasks/: RiverCourtsTask-Append1.kml  RiverCourtsTasks.kml
src/domain_bridge-aprotyas-add_foxy_support/examples/: example_bridge_config.yaml
src/interfaces/behavior_interface/: CMakeLists.txt  package.xml
src/interfaces/behavior_interface/behavior_interface/: behavior_ros_interface.py  (+8 more)
src/interfaces/bridging/: CMakeLists.txt  package.xml
src/interfaces/pixhawk_interface/: CMakeLists.txt  package.xml
src/interfaces/system_interface/: CMakeLists.txt  README.md  README.md~  package.xml
src/interfaces/system_interface/config/: system_params.yaml
src/interfaces/system_interface/include/system_interface/: #occupancy_grid.hpp#  .#occupancy_grid.hpp  agent_tracker.h  agent_tracker.hpp  heartbeat_server.hpp  occupancy_grid.hpp  swarm_tracker.hpp  swarm_tracker.hpp~  system.hpp
src/interfaces/system_interface/launch/: system.launch.py  system_sim.launch.py  system_sim.launch.py~
src/interfaces/system_interface/src/: #system.cpp#  .#heartbeat_server.cpp  agent_tracker.cpp  heartbeat_client.cpp  heartbeat_client_node.cpp  heartbeat_server.cpp  occupancy_grid.cpp  system.cpp
src/pixhawk/pixhawk_interface/: CMakeLists.txt  README.md  package.xml
src/turtlebot3/: CMakeLists.txt  package.xml
src/turtlebot3/launch/: turtlebot.launch.py
src/turtlebot3_control/: package.xml  setup.cfg  setup.py
src/turtlebot3_control/turtlebot3_control/: local_controller.py
src/turtlebot3_interface/: CMakeLists.txt  package.xml
src/turtlebot3_interface/src/: casa_passthrough.cpp  casa_passthrough.cpp~
src/utils/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/utils/src/: casa_utils.cpp  casa_utils.cpp~
tools/: casa_sim.bash  companion_setup.sh  cyclone_dds_config.xml  wifi_config.sh
(+301 files in other folders)
